--- a/index.html
+++ b/index.html
@@ -6,71 +6,95 @@
     <meta name="description" content="Python Module Installer that automatically installs missing Python modules from your script.">
     <title>Python Module Installer</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Python Module Installer</h1>
-        <p>Automatically install missing Python modules from your script with ease!</p>
+    <header class="header">
+        <div class="container">
+            <h1 class="title">Python Module Installer</h1>
+            <p class="subtitle">Automatically install missing Python modules from your script.</p>
+        </div>
     </header>
 
     <section class="intro">
-        <h2>Overview</h2>
-        <p>This Python script helps you to automatically detect and install missing dependencies from your Python script. It scans for import statements, extracts the necessary modules, and installs them for you.</p>
+        <div class="container">
+            <h2 class="section-title">Overview</h2>
+            <p class="section-text">This Python script helps you automatically detect and install missing dependencies from your Python script. It scans for import statements, extracts the necessary modules, and installs them for you.</p>
+        </div>
     </section>
 
     <section class="features">
-        <h2>Features</h2>
-        <ul>
-            <li>Auto scans Python scripts for import statements</li>
-            <li>Installs missing modules using pip</li>
-            <li>Supports drag-and-drop and file path input</li>
-            <li>Skips built-in Python modules</li>
-            <li>Fast and efficient!</li>
-        </ul>
+        <div class="container">
+            <h2 class="section-title">Features</h2>
+            <div class="feature-list">
+                <div class="feature">
+                    <span class="feature-icon">🔍</span>
+                    <p>Auto scan Python scripts for `import` statements</p>
+                </div>
+                <div class="feature">
+                    <span class="feature-icon">⚡</span>
+                    <p>Installs missing modules using `pip`</p>
+                </div>
+                <div class="feature">
+                    <span class="feature-icon">📁</span>
+                    <p>Supports drag-and-drop and file path input</p>
+                </div>
+                <div class="feature">
+                    <span class="feature-icon">✅</span>
+                    <p>Skips built-in Python modules</p>
+                </div>
+                <div class="feature">
+                    <span class="feature-icon">🚀</span>
+                    <p>Fast and efficient!</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="modules">
-        <h2>2000+ Supported Modules</h2>
-        <p>This script supports over 2000 popular Python modules, including:</p>
-        <div class="module-list">
-            <ul>
-                <li>numpy</li>
-                <li>pandas</li>
-                <li>matplotlib</li>
-                <li>scipy</li>
-                <li>requests</li>
-                <li>flask</li>
-                <li>tensorflow</li>
-                <li>beautifulsoup4</li>
-                <li>sqlalchemy</li>
-                <li>pytorch</li>
-                <li>pytest</li>
-                <li>django</li>
-                <li>seaborn</li>
-                <li>scikit-learn</li>
-                <li>pytest-django</li>
-                <!-- Add more modules here -->
-            </ul>
+        <div class="container">
+            <h2 class="section-title">2000+ Supported Modules</h2>
+            <p class="section-text">The script supports over 2000 popular Python modules, including:</p>
+            <div class="module-list">
+                <ul>
+                    <li>numpy</li>
+                    <li>pandas</li>
+                    <li>matplotlib</li>
+                    <li>scipy</li>
+                    <li>requests</li>
+                    <li>flask</li>
+                    <li>tensorflow</li>
+                    <li>beautifulsoup4</li>
+                    <li>sqlalchemy</li>
+                    <li>pytorch</li>
+                    <li>pytest</li>
+                    <li>django</li>
+                    <li>seaborn</li>
+                    <li>scikit-learn</li>
+                </ul>
+            </div>
         </div>
     </section>
 
     <section class="usage">
-        <h2>How to Use</h2>
-        <ol>
-            <li>Clone or download the repository from GitHub.</li>
-            <li>Run the script:
-                <pre><code>python module_installer.py</code></pre>
-            </li>
-            <li>Provide your Python script's file path when prompted (or drag and drop the file).</li>
-            <li>The script will automatically detect and install any missing modules.</li>
-        </ol>
+        <div class="container">
+            <h2 class="section-title">How to Use</h2>
+            <ol class="usage-steps">
+                <li>download the file.</li>
+                <li>Provide your Python script's file path when prompted (or drag and drop the file).</li>
+                <li>The script will automatically detect and install any missing modules.</li>
+            </ol>
+        </div>
     </section>
 
     <section class="download">
-        <h2>Download the Script</h2>
-        <p>You can download the latest version of the Python Module Installer from the link below:</p>
-        <a href="https://github.com/KXZZW/federalinstaller/releases/download/federal/federal.import.exe" target="_blank" class="download-button">Download Now</a>
+        <div class="container">
+            <h2 class="section-title">Download the Script</h2>
+            <p class="section-text">You can download the latest version of the Python Module Installer from the link below:</p>
+            <a href="https://github.com/KXZZW/federalinstaller/releases/download/federal/federal.import.exe" target="_blank" class="download-button">Download Now</a>
+        </div>
     </section>
-    
+
+    <script src="scripts.js"></script>
 </body>
 </html>
