--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <section class="download">
         <div class="container">
-            <h2 class="section-title">Download the Script</h2>
+            <h2 class="section-title">Download the File</h2>
             <p class="section-text">You can download the latest version of the Python Module Installer from the link below:</p>
             <a href="https://github.com/KXZZW/federalinstaller/releases/download/federal/federal.import.exe" target="_blank" class="download-button">Download Now</a>
         </div>
