--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a href="https://github.com/KXZZW/federalinstaller/releases/download/federal/federal.import.exe" target="_blank" class="download-button">Download Now</a>
         </div>
     </section>
- <img src="https://i.ibb.co/HTqRzCHS/space.png" alt="Space Image">
+ <img src="https://i.ibb.co/HTqRzCHS/space.png" alt="Flowers in Chania" width="850" height="345">
     <script src="scripts.js"></script>
 </body>
 </html>
