--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Python Module Installer that automatically installs missing Python modules from your script.">
+    <meta name="description" content="federal is a program that install all required modules for your py script">
     <title>Python Module Installer</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="title">Python Module Installer</h1>
+            <h1 class="title">federal importer v1.0</h1>
             <p class="subtitle">Automatically install missing Python modules from your script.</p>
         </div>
     </header>
@@ -19,7 +19,7 @@
     <section class="intro">
         <div class="container">
             <h2 class="section-title">Overview</h2>
-            <p class="section-text">This Python script helps you automatically detect and install missing dependencies from your Python script. It scans for import statements, extracts the necessary modules, and installs them for you.</p>
+            <p class="section-text">This program helps you automatically detect and install missing dependencies from your Python script. It scans for import statements, extracts the necessary modules, and installs them for you.</p>
         </div>
     </section>
 
